# cos-vectors-embed-cli

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
cos_vectors/: __init__.py  __version__.py  cli.py
cos_vectors/commands/: __init__.py  embed_put.py  embed_query.py
cos_vectors/core/: __init__.py  cos_vector_service.py  embedding_provider.py  streaming_batch_orchestrator.py  unified_processor.py
cos_vectors/utils/: __init__.py  config.py  models.py  multimodal_helpers.py
tests/: conftest.py  constants.py
tests/test_commands/: test_embed_put.py  test_embed_query.py
tests/test_core/: test_cos_vector_service.py  test_embedding_provider.py  test_streaming_batch_orchestrator.py  test_unified_processor.py
tests/test_utils/: test_config.py  test_models.py  test_multimodal_helpers.py
